topappbar: fix button target overflow

--- a/components/TopAppBar.css
+++ b/components/TopAppBar.css
@@ -56,6 +56,7 @@
 #leading {
   display: flex;
   align-items: center;
+  overflow: hidden;
 
   grid-column: 1;
   grid-row: 1;
@@ -85,6 +86,7 @@
   align-items: center;
   gap: 8px;
   justify-content: flex-end;
+  overflow: hidden;
 
   grid-column: 5;
   grid-row: 1;
